# python-ocagi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  baslat.ps1  config.py  controller.py  curriculum.json  curriculum_manager.py  dev_message.txt  developer_message.txt  engine.py  input_api.py  input_curses.py  input_threaded.py  kur_unix.sh  kur_windows.ps1  logging_config.py  main.py  progress.backup.json  progress.json  progress.json.migration_backup  pyproject.toml  requirements.txt  resource_guard.py  safe_runner.py  sandbox.py  test_sandbox.py  test_tokenizer.py  tokenizer.py  ui.py  ui_colors.py  ui_dev_message.py  ui_footer.py  ui_renderer.py  ui_utils.py  validators.py  vfs.py
.agent/skills/skill_application_state_management/: SKILL.md
.agent/skills/skill_curriculum_architecture_design/: SKILL.md
.agent/skills/skill_data_persistence_reliability/: SKILL.md
.agent/skills/skill_internal_system_quality_assurance/: SKILL.md
.agent/skills/skill_secure_execution_environment_governance/: SKILL.md
.agent/skills/skill_static_code_analysis_processing/: SKILL.md
.agent/skills/skill_system_configuration_management/: SKILL.md
.agent/skills/skill_user_input_event_handling/: SKILL.md
.agent/skills/skill_validation_logic_implementation/: SKILL.md
.agent/skills/skill_visual_interface_engineering/: SKILL.md
curriculum/: manifest.json
curriculum/01_temeller/001_merhaba_python/: solution.py  (+2 more)
input/: __init__.py  api.py  curses_driver.py
sandbox/: __init__.py  executor.py
tests/: conftest.py  test_controller.py  test_curriculum.py  test_curriculum_manager.py  test_curriculum_solvability.py  test_engine.py  test_input.py  test_integration_ui.py  test_resource_guard.py  test_secure_exec.py  test_tokenizer.py  test_ui_footer.py  test_ui_utils.py  test_validators.py  test_vfs.py  verify_id_migration.py  virtual_terminal.py
tools/: apply_id_migration.py  scaffold_lesson.py  test_curriculum_solvability.py  validate_curriculum.py
ui/: __init__.py  colors.py  dev_message.py  editor.py  footer.py  renderer.py  utils.py
(+376 files in other folders)
